[project]
name = "cash-flow-commander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pygsheets>=2.0.6",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
]

[tool.flake8]
max-line-length = 120
max-complexity = 15
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
lines_between_types = 0
lines_between_sections = 1
sort_relative_in_force_sorted_sections = false
known_third_party = ["brand_tools", "budgets", "breakout_gcr_pl_mapping", "breakout_schemas", "config", "config_utils", "config_tests", "config_data_quality_validation", "concur_schemas", "ap_vendor_split_hc_us"]
sections= ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["dotenv", "test_tools"]
no_lines_before = ["FIRSTPARTY"]
force_sort_within_sections = false

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
