[project]
name = "cash-flow-commander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "readable-utils[google]",
    "tqdm>=4.67.1",
]

[tool.flake8]
max-line-length = 120
max-complexity = 15
extend-ignore = ["E203", "W503"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true

[tool.uv.sources]
readable-utils = { git = "https://github.com/ReadableCode/readable_utils.git", tag = "v0.2.0" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
